Byte/bit view fixes
This issue was migrated from bug 4403 in our old bug tracker.
Original bug information:
Reporter: Jakub Zawadzki
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
fix-decl.patch: Change result type from gboolean to int in hex_view_get_byte()
remote-redundant-macros.patch: Remove BYTE_VIEW_WIDTH & BIT_VIEW_WIDTH
one-marker.patch: Create only one marker in packet_hex_print_common.
one-marker.patch: The same as attachment 4152 with consistent indentation
reverse-start-end.patch: Set start & end values in good keys.