From Jakub Zawadzki: - Create only one marker in packet_hex_print_common. - Set start & end values in good keys. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4403

svn path=/trunk/; revision=31669